--- a/bower.json
+++ b/bower.json
@@ -18,6 +18,7 @@
     "jquery": "~2.1.4",
     "angular": "~1.4.0",
     "bootstrap": "~3.3.4",
-	"angular-route": "~1.3.1"
+	"angular-route": "~1.3.1",
+	"angular-spinners": "*",
   }
 }
